--- a/.github/workflows/deploy-flutter-app.yml
+++ b/.github/workflows/deploy-flutter-app.yml
@@ -1,67 +1,29 @@
-# reusable-flutter-cicd.yml
-name: Reusable Flutter CI/CD Solution
+# deploy-flutter-app.yml
+name: Reusable Flutter Deploy Solution
 
 on:
   workflow_call:
-    inputs:
-      app-repo:
-        required: true
-        type: string
-      app-repo-ref:
-        required: true
-        type: string
-      app-name:
-        required: true
-        type: string
     secrets:
-      # Segredos do Environment 'DES'
-      KEYSTORE:
-        required: true
-      KEYSTOREPASS:
-        required: true
-      ALIAS:
-        required: true
-        
-      # Segredos do Environment 'DES_CD'
       FIREBASE_SERVICE_ACCOUNT:
         required: true
       FIREBASE_APP_ID:
         required: true
+    inputs:
+      app-name:
+        description: 'The name of the app used for the .aab file (e.g., DUMMIE-REPO)'
+        required: true
+        type: string
 
 jobs:
-  build_app:
-    name: Build and Sign App
-    runs-on: self-hosted # Executa no seu runner
-    outputs:
-      aab-path: ${{ steps.build_action.outputs.aab-path }}
-    steps:
-      - name: Execute Build and Sign Action
-        id: build_action
-        uses: ZapDiscas/WorkflowTemplates/flutter-build-sign@main # Atenção para usar a tag/branch correta
-        with:
-          app-repo: ${{ inputs.app-repo }}
-          app-repo-ref: ${{ inputs.app-repo-ref }}
-          keystore-base64: ${{ secrets.KEYSTORE }}
-          keystore-password: ${{ secrets.KEYSTOREPASS }}
-          key-alias: ${{ secrets.ALIAS }}
-
-      - name: Upload App Bundle as Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-bundle
-          path: ${{ steps.build_action.outputs.aab-path }}
-          retention-days: 1
-
-  deploy_app:
+  deploy:
     name: Deploy to Firebase
-    needs: build_app
-    runs-on: self-hosted # Executa no seu runner
+    runs-on: self-hosted
     steps:
       - name: Download App Bundle Artifact
         uses: actions/download-artifact@v4
         with:
           name: app-bundle
-          
+
       - name: Decode Firebase Service Account
         id: decode_firebase_sa
         shell: bash
@@ -75,5 +37,5 @@ jobs:
         with:
           appId: ${{ secrets.FIREBASE_APP_ID }}
           serviceCredentialsFile: ${{ steps.decode_firebase_sa.outputs.firebase_sa_path }}
-          file: ${{ inputs.app-name }}.aab # O download-artifact extrai o arquivo para o root
+          file: ${{ inputs.app-name }}.aab
           groups: 'qa-testers'
